# rust-devcontainer

./: .env.dist  .gitattributes  Cargo.toml  DNS_SERVER.md  Makefile  README.md  create_file.sh  index.html  package.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml
.github/workflows/: rust-clippy.yml
app/: Cargo.toml
app/src/: get.rs  main.rs  push.rs
hello-wasm/: README.md  index.html
invoice/: package-lock.json  package.json  vite.config.ts
invoice/src/: App.vue  main.ts
invoice/src/assets/scss/: _breakpoint.scss  _color.scss
invoice/src/components/: Invoice.vue  TheHeader.vue
invoice/src/pages/: Home.vue  Signup.vue  invoiceView.vue
invoice/src/router/: index.ts
invoice/src/store/: index.ts
invoice/src/types/: invoice.model.ts
invoice/src/types/d/: vuex.d.ts
my-rust-lambda/: .env.local  Cargo.toml  README.ja.md  README.md
my-rust-lambda/src/: http_handler.rs
nuxt-app/: nuxt.config.js  package.json
nuxt-app/components/: Tutorial.vue
nuxt-app/pages/: about.vue
restaurant/src/: lib.rs
slidev/: package.json  slides.md
src/: App.vue  anyhow.rs  api_mock.rs  arc.rs  as_ref.rs  box_heap.rs  box_list.rs  btree.rs  btree_set.rs  cafe_scraper.rs  cardinality_example.rs  closure.rs  command_query.rs  composite_cardinality.rs  custom_error.rs  custom_error2.rs  date.rs  dead_lock.rs  default.rs  deref.rs  display.rs  dns_server.rs  dyn_trait.rs  expo.rs  feature.rs  flatten.rs  from.rs  generics.rs  gyazo.rs  index.css  index_shotgun.rs  ineffective_index.rs  into.rs  iter.rs  lifetime.rs  macro_echo_num.rs  main.rs  main.ts  map.rs  matches.rs  (+32 more)
src/components/: LeftList.vue  RightList.vue
src/store/: index.ts
sse/: Cargo.toml  README.md
sse/asset/: index.html  script.js
vite-vue-template-main/: index.html  package-lock.json  package.json  tsconfig.json
vite-vue-template-main/src/: App.vue  main.ts
vite-vue-template-main/src/assets/scss/: _mixin.scss  _variables.scss  style.scss
vite-vue-template-main/src/pages/: Home.vue  Signin.vue  Signup.vue  Top.vue
vite-vue-template-main/src/router/: index.ts
vite-vue-template-main/src/store/: index.ts
vue-docker/: README.md  docker-compose.yml  package.json
vue-docker/src/: App.vue
vue3-vite-ts/: index.html  package.json
vue3-vite-ts/src/: App.vue  main.ts
vue3-vite-ts/src/components/: RightList.vue
vue3-vite-ts/src/store/: index.ts
