workspace = { members = ["restaurant"] }
[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_demo = { git = "https://github.com/katayama8000/crates-publish-minimal", features = [
    "second",
], default-features = false }
tokio = { version = "1.42.0", features = ["full"] }
mockito = "1.6.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_derive = "1.0.216"
serde_with = "3.11.0"
anyhow = "1.0.94"
num-traits = "0.2.19"
mockall = "0.13.1"
chrono = "0.4.39"
chrono-tz = "0.10.0"
supabase_rs = "0.4.0"
dotenv = "0.15.0"
thiserror = "2.0.6"
scraper = "0.22.0"
url = "2.5.4"
percent-encoding = "2.3.1"
gyazo_client = "0.2.7"
expo_push_notification_client = { branch = "fix_data_param", git = "https://github.com/katayama8000/expo-push-notification-client-rust" }
restaurant = { path = "restaurant" }

[package.metadata.scripts]
run = "cargo run"
test = "cargo test"

[features]
default = []
japanese = []
basic = []
extra = []
