[profile.dev]
debug = false

workspace = { members = ["hello-wasm", "restaurant", "sse"] }
[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
run = "cargo run"
test = "cargo test"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenv = "0.15.0"
expo_push_notification_client = { branch = "fix_data_param", git = "https://github.com/katayama8000/expo-push-notification-client-rust" }
gyazo_client = "0.2.7"
lib_demo = { git = "https://github.com/katayama8000/crates-publish-minimal", features = [
    "second",
], default-features = false }
mockall = "0.13.1"
mockito = "1.7.0"
num-traits = "0.2.19"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", features = ["json"] }
restaurant = { path = "restaurant" }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.134"
serde_with = "3.15.0"
supabase_rs = "0.4.16"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[features]
default = []
japanese = []
basic = []
extra = []
