[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_demo = "0.1.0"
tokio = {version = "1.35.0", features=["full"]}
expo_server_sdk = {git = "https://github.com/katayama8000/expo-server-sdk-rust/", branch = "main"}
mockito = "1.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version ="1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_derive = "1.0.193"
serde_with = "3.4.0"

